--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Dog Dating Website</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -51,11 +52,11 @@
   <section id="testimonials">
 
     <h2>Quote 1. Woof.</h2>
-    <img src="images/dog-img.jpg" >
+    <img src="images/dog-img.jpg">
     <em>Beirut, Lebanon</em>
 
     <h2>Quote 2. Woof.</h2>
-    <img src="images/dog-img.jpg" >
+    <img src="images/dog-img.jpg">
     <em>Beirut, Lebanon</em>
 
   </section>
@@ -64,8 +65,8 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/mtv-logo.png" >
-    <img src="images/lbci-logo.png" >
+    <img src="images/mtv-logo.png">
+    <img src="images/lbci-logo.png">
   </section>
 
 
@@ -123,7 +124,7 @@
 
   </footer>
 
-
+  <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
