--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
     <!-- Nav Bar -->
 
 
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a href="#" class="navbar-brand">MyApp</a>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="#pricing" class="nav-link">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a href="#download" class="nav-link">Download</a>
+            </li>
+          </ul>
+        </div>
+      </div>
 
+    </nav>
 
     <!-- Title -->
 
