--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Dog Dating Website</title>
-  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -15,10 +15,13 @@
     <!-- Nav Bar -->
 
 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar cppp navbar-expand-lg navbar-dark">
       <div class="container">
         <a href="#" class="navbar-brand">MyApp</a>
-        <div class="collapse navbar-collapse">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="#contact" class="nav-link">Contact</a>
@@ -36,8 +39,7 @@
     </nav>
 
     <!-- Title -->
-
-    <div>
+    <div class="cppp">
       <h1>Meet dog next door.</h1>
       <button type="button">Download</button>
       <button type="button">Download</button>
@@ -45,7 +47,6 @@
     <div>
       <img src="images/app.png">
     </div>
-
   </section>
 
 
