working on title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Nav Bar -->
 
 
-    <nav class="navbar cppp navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-transparent navbar-dark">
       <div class="container">
         <a href="#" class="navbar-brand">MyApp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -35,17 +35,18 @@
           </ul>
         </div>
       </div>
-
     </nav>
 
     <!-- Title -->
-    <div class="cppp">
-      <h1>Meet dog next door.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/app.png">
+    <div class="container row">
+      <div class="col-lg p-5 align-items-center text-center">
+        <h1>Meet dog next door.</h1>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
+      <div class="col-lg text-center rotated">
+        <img src="images/app.png" width="50%">
+      </div>
     </div>
   </section>
 
