--- a/index.html
+++ b/index.html
@@ -10,66 +10,65 @@
 
 <body>
 
-  <section id="title">
 
-    <!-- Nav Bar -->
-
-
-    <nav class="navbar navbar-expand-lg bg-transparent navbar-dark">
-      <div class="container">
-        <a href="#" class="navbar-brand">MyApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="#contact" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a href="#pricing" class="nav-link">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a href="#download" class="nav-link">Download</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Title -->
-    <div class="container row">
-      <div class="col-lg p-5 align-items-center text-center">
-        <h1>Meet dog next door.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-      </div>
-      <div class="col-lg text-center rotated">
-        <img src="images/app.png" width="50%">
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg bg-transparent navbar-dark py-3">
+    <div class="container">
+      <a href="#" class="navbar-brand">MyApp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="#pricing" class="nav-link">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a href="#download" class="nav-link">Download</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+
+  <!-- Title -->
+  <section id="title"></section>
+  <div class="container">
+    <div class="d-sm-flex">
+      <div>
+        <h1>Meet dog next door.</h1>
+        <button class="btn btn-dark">Download</button>
+        <button class="btn btn-outline-light">Download</button>
+      </div>
+      <img class="img-fluid w-50" src="images/app.png">
+    </div>
+  </div>
   </section>
 
 
   <!-- Features -->
-
   <section id="features">
-
-    <h3>Feature1</h3>
-    <p>Write soemthing here...</p>
-
-    <h3>Feature2</h3>
-    <p>Write soemthing here...</p>
-
-    <h3>Feature3</h3>
-    <p>Write soemthing here...</p>
+    <div>
+      <h3>Feature1</h3>
+      <p>Write soemthing here...</p>
+    </div>
+    <div>
+      <h3>Feature2</h3>
+      <p>Write soemthing here...</p>
+    </div>
+    <div>
+      <h3>Feature3</h3>
+      <p>Write soemthing here...</p>
+    </div>
 
   </section>
 
 
   <!-- Testimonials -->
-
-  <section id="testimonials">
+  <section id=" testimonials">
 
     <h2>Quote 1. Woof.</h2>
     <img src="images/dog-img.jpg">
@@ -83,7 +82,6 @@
 
 
   <!-- Press -->
-
   <section id="press">
     <img src="images/mtv-logo.png">
     <img src="images/lbci-logo.png">
@@ -91,7 +89,6 @@
 
 
   <!-- Pricing -->
-
   <section id="pricing">
 
     <h2>Packages</h2>
@@ -126,10 +123,9 @@
 
 
   <!-- Call to Action -->
-
   <section id="cta">
 
-    <h3>The APP that your log needs.</h3>
+    <h3>The APP that your dog needs.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
@@ -137,7 +133,6 @@
 
 
   <!-- Footer -->
-
   <footer id="footer">
 
     <p>© Copyright SEF</p>
