features section grid

--- a/index.html
+++ b/index.html
@@ -35,33 +35,37 @@
   </nav>
 
   <!-- Title -->
-  <section id="title"></section>
-  <div class="container">
-    <div class="d-sm-flex">
-      <div>
-        <h1>Meet dog next door.</h1>
-        <button class="btn btn-dark">Download</button>
-        <button class="btn btn-outline-light">Download</button>
+  <section id="title" class="text-light p-5 text-center text-sm-start p-lg-0">
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+          <h1>Meet dog next door.</h1>
+          <button class="btn btn-dark">Download</button>
+          <button class="btn btn-outline-light">Download</button>
+        </div>
+        <img class="img-fluid w-25" src="images/appp.png">
       </div>
-      <img class="img-fluid w-50" src="images/app.png">
     </div>
-  </div>
   </section>
 
 
   <!-- Features -->
-  <section id="features">
-    <div>
-      <h3>Feature1</h3>
-      <p>Write soemthing here...</p>
-    </div>
-    <div>
-      <h3>Feature2</h3>
-      <p>Write soemthing here...</p>
-    </div>
-    <div>
-      <h3>Feature3</h3>
-      <p>Write soemthing here...</p>
+  <section id="features" class="bg-white text-center p-5">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h3>Feature1</h3>
+          <p>Write soemthing here...</p>
+        </div>
+        <div class="col">
+          <h3>Feature2</h3>
+          <p>Write soemthing here...</p>
+        </div>
+        <div class="col">
+          <h3>Feature3</h3>
+          <p>Write soemthing here...</p>
+        </div>
+      </div>
     </div>
 
   </section>
