added cards and centered footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </nav>
 
   <!-- Title -->
-  <section id="title" class="text-light p-5 text-center text-sm-start p-lg-0">
+  <section id="title" class="text-light p-5 text-center text-sm-start">
     <div class="container">
       <div class="d-sm-flex align-items-center justify-content-between">
         <div>
@@ -52,16 +52,16 @@
   <!-- Features -->
   <section id="features" class="bg-white text-center p-5">
     <div class="container">
-      <div class="row">
-        <div class="col">
+      <div class="row text-center">
+        <div class="col-lg">
           <h3>Feature1</h3>
           <p>Write soemthing here...</p>
         </div>
-        <div class="col">
+        <div class="col-md">
           <h3>Feature2</h3>
           <p>Write soemthing here...</p>
         </div>
-        <div class="col">
+        <div class="col-md">
           <h3>Feature3</h3>
           <p>Write soemthing here...</p>
         </div>
@@ -93,54 +93,85 @@
 
 
   <!-- Pricing -->
-  <section id="pricing">
+  <section id="pricing" class="bg-white text-center ">
+    <div class="container">
+      <div class="row">
 
-    <h2>Packages</h2>
-    <p>Something interesting here...</p>
+        <h2>Packages</h2>
+        <p>Something interesting here...</p>
 
+        <div class="row">
+          <div class="col-md" <div class="card" style="width: 18rem;">
+            <h3 class="card-img-top">Package 1</h3>
+            <div class="card-body">
+              <h2 class="card-title">Free</h2>
+              <p class="card-text">Unlimited Matches
+              </p>
+              <p class="card-text">Unlimited Messages
+              </p>
+              </p>
+              <p class="card-text">Unlimited App Usage
+              </p>
 
-    <h3>Package 1</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+            </div>
+          </div>
 
+          <div class="col-md" <div class="card" style="width: 18rem;">
+            <h3 class="card-img-top">Package 2</h3>
+            <div class="card-body">
+              <h2 class="card-title">$29 / mo</h2>
+              <p class="card-text">5 Matches Per Day
+              </p>
+              <p class="card-text">10 Messages Per Day
+              </p>
+              </p>
+              <p class="card-text">Unlimited App Usage
+              </p>
 
-    <h3>Package 2</h3>
-    <h2>$29 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+            </div>
+          </div>
 
+          <div class="col-md" <div class="card" style="width: 18rem;">
+            <h3 class="card-img-top">$49 / mo</h3>
+            <div class="card-body">
+              <h2 class="card-title">Free</h2>
+              <p class="card-title">Pirority Listing
+              </p>
+              <p class="card-text">Unlimited Matches
+              </p>
+              <p class="card-text">Unlimited Messages
+              </p>
+              </p>
+              <p class="card-text">Unlimited App Usage
+              </p>
 
-    <h3>Package 3</h3>
-    <h2>$49 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+            </div>
+          </div>
 
+        </div>
+      </div>
+    </div>
   </section>
 
 
   <!-- Call to Action -->
   <section id="cta">
-
-    <h3>The APP that your dog needs.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <div class="container text-center align-items-center p-5">
+      <div class="">
+        <h3>The APP that your dog needs.</h3>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
+    </div>
   </section>
 
 
   <!-- Footer -->
-  <footer id="footer">
-
+  <footer id="footer" class="text-center bg-white p-5">
     <p>© Copyright SEF</p>
-
   </footer>
 
   <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
