added cards and centered footer

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
           </div>
 
           <div class="col-md" <div class="card" style="width: 18rem;">
-            <h3 class="card-img-top">$49 / mo</h3>
+            <h3 class="card-img-top">Package 3</h3>
             <div class="card-body">
-              <h2 class="card-title">Free</h2>
+              <h2 class="card-title">$49 / mo</h2>
               <p class="card-title">Pirority Listing
               </p>
               <p class="card-text">Unlimited Matches
