--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
     </div>
   </nav>
 
+
   <!-- Title -->
   <section id="title" class="text-light p-5 text-center text-sm-start">
-    <div class="container">
-      <div class="d-sm-flex align-items-center justify-content-between">
-        <div>
-          <h1>Meet dog next door.</h1>
-          <button class="btn btn-dark">Download</button>
-          <button class="btn btn-outline-light">Download</button>
-        </div>
-        <img class="img-fluid w-25" src="images/appp.png">
+    <div class="container d-sm-flex align-items-center justify-content-between">
+      <div>
+        <h1>Meet dog next door.</h1>
+        <button class="btn btn-dark">Download</button>
+        <button class="btn btn-outline-light">Download</button>
       </div>
+      <img class="img-fluid w-25" src="images/appp.png">
     </div>
+
   </section>
 
 
@@ -75,11 +75,11 @@
   <section id=" testimonials">
 
     <h2>Quote 1. Woof.</h2>
-    <img src="images/dog-img.jpg">
+    <img class="w-50" src="images/dog-img.jpg">
     <em>Beirut, Lebanon</em>
 
     <h2>Quote 2. Woof.</h2>
-    <img src="images/dog-img.jpg">
+    <img class="w-50" src="images/dog-img.jpg">
     <em>Beirut, Lebanon</em>
 
   </section>
@@ -87,13 +87,21 @@
 
   <!-- Press -->
   <section id="press">
-    <img src="images/mtv-logo.png">
-    <img src="images/lbci-logo.png">
+    <div class="container p-5">
+      <div class="row ">
+        <div class="col">
+          <img class="w-50" src="images/mtv-logo.png">
+        </div>
+        <div class="col">
+          <img class="w-50" src="images/lbci-logo.png">
+        </div>
+      </div>
+    </div>
   </section>
 
 
   <!-- Pricing -->
-  <section id="pricing" class="bg-white text-center ">
+  <section id="pricing" class="bg-white text-center p-5">
     <div class="container">
       <div class="row">
 
@@ -101,53 +109,59 @@
         <p>Something interesting here...</p>
 
         <div class="row">
-          <div class="col-md" <div class="card" style="width: 18rem;">
-            <h3 class="card-img-top">Package 1</h3>
-            <div class="card-body">
-              <h2 class="card-title">Free</h2>
-              <p class="card-text">Unlimited Matches
-              </p>
-              <p class="card-text">Unlimited Messages
-              </p>
-              </p>
-              <p class="card-text">Unlimited App Usage
-              </p>
+          <div class="col p-3">
+            <div class="card mx-auto" style="width: 18rem;">
+              <h3 class="card-img-top">Package 1</h3>
+              <div class="card-body">
+                <h2 class="card-title">Free</h2>
+                <p class="card-text">Unlimited Matches
+                </p>
+                <p class="card-text">Unlimited Messages
+                </p>
+                </p>
+                <p class="card-text">Unlimited App Usage
+                </p>
 
-              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+                <a href="#" class="btn btn-outline-dark">Sign Up</a>
+              </div>
             </div>
           </div>
 
-          <div class="col-md" <div class="card" style="width: 18rem;">
-            <h3 class="card-img-top">Package 2</h3>
-            <div class="card-body">
-              <h2 class="card-title">$29 / mo</h2>
-              <p class="card-text">5 Matches Per Day
-              </p>
-              <p class="card-text">10 Messages Per Day
-              </p>
-              </p>
-              <p class="card-text">Unlimited App Usage
-              </p>
+          <div class="col p-3">
+            <div class="card mx-auto" style="width: 18rem;">
+              <h3 class="card-img-top">Package 2</h3>
+              <div class="card-body">
+                <h2 class="card-title">$29 / mo</h2>
+                <p class="card-text">5 Matches Per Day
+                </p>
+                <p class="card-text">10 Messages Per Day
+                </p>
+                </p>
+                <p class="card-text">Unlimited App Usage
+                </p>
 
-              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+                <a href="#" class="btn btn-outline-dark">Sign Up</a>
+              </div>
             </div>
           </div>
 
-          <div class="col-md" <div class="card" style="width: 18rem;">
-            <h3 class="card-img-top">Package 3</h3>
-            <div class="card-body">
-              <h2 class="card-title">$49 / mo</h2>
-              <p class="card-title">Pirority Listing
-              </p>
-              <p class="card-text">Unlimited Matches
-              </p>
-              <p class="card-text">Unlimited Messages
-              </p>
-              </p>
-              <p class="card-text">Unlimited App Usage
-              </p>
+          <div class="col p-3">
+            <div class="card mx-auto" style="width: 18rem;">
+              <h3 class="card-img-top">Package 3</h3>
+              <div class="card-body">
+                <h2 class="card-title">$49 / mo</h2>
+                <p class="card-title">Pirority Listing
+                </p>
+                <p class="card-text">Unlimited Matches
+                </p>
+                <p class="card-text">Unlimited Messages
+                </p>
+                </p>
+                <p class="card-text">Unlimited App Usage
+                </p>
 
-              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+                <a href="#" class="btn btn-outline-dark">Sign Up</a>
+              </div>
             </div>
           </div>
 
@@ -173,6 +187,7 @@
   <footer id="footer" class="text-center bg-white p-5">
     <p>© Copyright SEF</p>
   </footer>
+
 
   <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
