added carousel in testimonials section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button class="btn btn-dark">Download</button>
         <button class="btn btn-outline-light">Download</button>
       </div>
-      <img class="img-fluid w-25" src="images/appp.png">
+      <img class="img-fluid w-25" src="images/app.png">
     </div>
 
   </section>
@@ -72,30 +72,46 @@
 
 
   <!-- Testimonials -->
+
   <section id=" testimonials">
+    <div id="carouselExampleControls" class="carousel slide p-5" data-bs-ride="carousel">
+      <div class="carousel-inner text-center">
+        <div class="carousel-item active">
+          <h2>Quote 1. Woof.</h2>
+          <img class="w-25" src="images/dog-img.jpg">
+          <em>Beirut, Lebanon</em>
+        </div>
+        <div class="carousel-item">
+          <h2>Quote 2. Woof.</h2>
+          <img class="w-25" src="images/dog-img.jpg">
+          <em>Beirut, Lebanon</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
-    <h2>Quote 1. Woof.</h2>
-    <img class="w-50" src="images/dog-img.jpg">
-    <em>Beirut, Lebanon</em>
 
-    <h2>Quote 2. Woof.</h2>
-    <img class="w-50" src="images/dog-img.jpg">
-    <em>Beirut, Lebanon</em>
+
+
+
 
   </section>
 
 
   <!-- Press -->
   <section id="press">
-    <div class="container p-5">
-      <div class="row ">
-        <div class="col">
-          <img class="w-50" src="images/mtv-logo.png">
-        </div>
-        <div class="col">
-          <img class="w-50" src="images/lbci-logo.png">
-        </div>
-      </div>
+    <div class="container p-5 text-center">
+      <img class="w-25 px-1" src="images/mtv-logo.png">
+      <img class="w-25 px-1 " src="images/lbci-logo.png">
     </div>
   </section>
 
@@ -173,12 +189,10 @@
 
   <!-- Call to Action -->
   <section id="cta">
-    <div class="container text-center align-items-center p-5">
-      <div class="">
-        <h3>The APP that your dog needs.</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-      </div>
+    <div class="container text-center p-5">
+      <h3>The APP that your dog needs.</h3>
+      <button class="btn btn-dark">Download</button>
+      <button class="btn btn-outline-light">Download</button>
     </div>
   </section>
 
