--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Dog Dating Website</title>
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/fontawesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -21,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="#footer" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
             <a href="#pricing" class="nav-link">Pricing</a>
           </li>
           <li class="nav-item">
-            <a href="#download" class="nav-link">Download</a>
+            <a href="#cta" class="nav-link">Download</a>
           </li>
         </ul>
       </div>
@@ -43,7 +44,7 @@
         <button class="btn btn-dark">Download</button>
         <button class="btn btn-outline-light">Download</button>
       </div>
-      <img class="img-fluid w-25" src="images/app.png">
+      <img class="img-fluid w-25" src="images/appp.png">
     </div>
 
   </section>
@@ -53,15 +54,15 @@
   <section id="features" class="bg-white text-center p-5">
     <div class="container">
       <div class="row text-center">
-        <div class="col-lg">
+        <div class="col-md">
           <h3>Feature1</h3>
           <p>Write soemthing here...</p>
         </div>
-        <div class="col-md">
+        <div class="col-sm">
           <h3>Feature2</h3>
           <p>Write soemthing here...</p>
         </div>
-        <div class="col-md">
+        <div class="col-sm">
           <h3>Feature3</h3>
           <p>Write soemthing here...</p>
         </div>
@@ -125,16 +126,14 @@
         <p>Something interesting here...</p>
 
         <div class="row">
+
           <div class="col p-3">
             <div class="card mx-auto" style="width: 18rem;">
               <h3 class="card-img-top">Package 1</h3>
               <div class="card-body">
                 <h2 class="card-title">Free</h2>
-                <p class="card-text">Unlimited Matches
-                </p>
-                <p class="card-text">Unlimited Messages
-                </p>
-                </p>
+                <p class="card-text">Unlimited Matches</p>
+                <p class="card-text">Unlimited Messages</p>
                 <p class="card-text">Unlimited App Usage
                 </p>
 
@@ -148,13 +147,9 @@
               <h3 class="card-img-top">Package 2</h3>
               <div class="card-body">
                 <h2 class="card-title">$29 / mo</h2>
-                <p class="card-text">5 Matches Per Day
-                </p>
-                <p class="card-text">10 Messages Per Day
-                </p>
-                </p>
-                <p class="card-text">Unlimited App Usage
-                </p>
+                <p class="card-text">5 Matches Per Day</p>
+                <p class="card-text">10 Messages Per Day</p>
+                <p class="card-text">Unlimited App Usage</p>
 
                 <a href="#" class="btn btn-outline-dark">Sign Up</a>
               </div>
@@ -166,19 +161,14 @@
               <h3 class="card-img-top">Package 3</h3>
               <div class="card-body">
                 <h2 class="card-title">$49 / mo</h2>
-                <p class="card-title">Pirority Listing
-                </p>
-                <p class="card-text">Unlimited Matches
-                </p>
-                <p class="card-text">Unlimited Messages
-                </p>
-                </p>
-                <p class="card-text">Unlimited App Usage
-                </p>
-
+                <p class="card-title">Pirority Listing</p>
+                <p class="card-text">Unlimited Matches </p>
+                <p class="card-text">Unlimited Messages</p>
+                <p class="card-text">Unlimited App Usage</p>
                 <a href="#" class="btn btn-outline-dark">Sign Up</a>
               </div>
             </div>
+
           </div>
 
         </div>
