--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <div class="col p-3">
             <div class="card mx-auto" style="width: 18rem;">
-              <h3 class="card-img-top">Package 1</h3>
+              <h3 class="card-header">Package 1</h3>
               <div class="card-body">
                 <h2 class="card-title">Free</h2>
                 <p class="card-text">Unlimited Matches</p>
@@ -144,7 +144,7 @@
 
           <div class="col p-3">
             <div class="card mx-auto" style="width: 18rem;">
-              <h3 class="card-img-top">Package 2</h3>
+              <h3 class="card-header">Package 2</h3>
               <div class="card-body">
                 <h2 class="card-title">$29 / mo</h2>
                 <p class="card-text">5 Matches Per Day</p>
@@ -158,7 +158,7 @@
 
           <div class="col p-3">
             <div class="card mx-auto" style="width: 18rem;">
-              <h3 class="card-img-top">Package 3</h3>
+              <h3 class="card-header">Package 3</h3>
               <div class="card-body">
                 <h2 class="card-title">$49 / mo</h2>
                 <p class="card-title">Pirority Listing</p>
