fixed cards again and hid all the images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg bg-transparent navbar-dark py-4 navfont">
     <div class="container px-5">
-      <a href="#" class="navbar-brand">
+      <a href="#" class="navbar-brand px-4">
         <h2>MyApp</h2>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -40,7 +40,7 @@
   <!-- Title -->
   <section id="title" class="text-light p-5 text-center text-sm-start">
     <div class="container d-sm-flex align-items-center justify-content-between px-5">
-      <div>
+      <div class="px-4">
         <h1>Meet dog next door.</h1>
         <button class="btn btn-dark">Download</button>
         <button class="btn btn-outline-light">Download</button>
@@ -75,17 +75,17 @@
 
   <!-- Testimonials -->
 
-  <section id=" testimonials">
+  <section id=" testimonials p-5">
     <div id="carouselExampleControls" class="carousel slide p-5" data-bs-ride="carousel">
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
           <h2>Quote 1. Woof.</h2>
-          <img class="w-25" src="images/dog-img.jpg">
+          <img class="w-25" src="images/ddog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
         <div class="carousel-item">
           <h2>Quote 2. Woof.</h2>
-          <img class="w-25" src="images/dog-img.jpg">
+          <img class="w-25" src="images/ddog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
       </div>
@@ -110,10 +110,10 @@
 
 
   <!-- Press -->
-  <section id="press">
-    <div class="container p-5 text-center">
-      <img class="w-25 px-1" src="images/mtv-logo.png">
-      <img class="w-25 px-1 " src="images/lbci-logo.png">
+  <section id="press" class="p-5">
+    <div class="container text-center">
+      <img class="w-25 px-1" src="images/mmtv-logo.png">
+      <img class="w-25 px-1 " src="images/llbci-logo.png">
     </div>
   </section>
 
@@ -121,58 +121,54 @@
   <!-- Pricing -->
   <section id="pricing" class="bg-white text-center p-5">
     <div class="container">
-      <div class="row">
 
-        <h2>Packages</h2>
-        <p>Something interesting here...</p>
+      <h2>Packages</h2>
+      <p>Something interesting here...</p>
 
-        <div class="row">
+      <div class="d-sm-flex justify-content-center">
 
-          <div class="col p-3 mx-auto">
-            <div class="card" style="width: 18rem;">
-              <h3 class="card-header">Package 1</h3>
-              <div class="card-body">
-                <h2 class="card-title">Free</h2>
-                <p class="card-text">Unlimited Matches</p>
-                <p class="card-text">Unlimited Messages</p>
-                <p class="card-text">Unlimited App Usage
-                </p>
-
-                <a href="#" class="btn btn-outline-dark">Sign Up</a>
-              </div>
+        <div class="m-auto px-5 py-2">
+          <div class=" card" style="width: 18rem;">
+            <h3 class="card-header">Package 1</h3>
+            <div class="card-body">
+              <h2 class="card-title">Free</h2>
+              <p class="card-text">5 Matches Per Day</p>
+              <p class="card-text">10 Messages Per Day</p>
+              <p class="card-text">Unlimited App Usage</p>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
             </div>
           </div>
-
-          <div class="col p-3">
-            <div class="card" style="width: 18rem;">
-              <h3 class="card-header">Package 2</h3>
-              <div class="card-body">
-                <h2 class="card-title">$29 / mo</h2>
-                <p class="card-text">5 Matches Per Day</p>
-                <p class="card-text">10 Messages Per Day</p>
-                <p class="card-text">Unlimited App Usage</p>
-
-                <a href="#" class="btn btn-outline-dark">Sign Up</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col p-3">
-            <div class="card" style="width: 18rem;">
-              <h3 class="card-header">Package 3</h3>
-              <div class="card-body">
-                <h2 class="card-title">$49 / mo</h2>
-                <p class="card-title">Pirority Listing</p>
-                <p class="card-text">Unlimited Matches </p>
-                <p class="card-text">Unlimited Messages</p>
-                <p class="card-text">Unlimited App Usage</p>
-                <a href="#" class="btn btn-outline-dark">Sign Up</a>
-              </div>
-            </div>
-
-          </div>
-
         </div>
+
+
+        <div class="m-auto px-5 py-2">
+          <div class="card" style="width: 18rem;">
+            <h3 class="card-header">Package 2</h3>
+            <div class="card-body">
+              <h2 class="card-title">$29 / mo</h2>
+              <p class="card-text">Unlimited Matches</p>
+              <p class="card-text">Unlimited Messages</p>
+              <p class="card-text">Unlimited App Usage</p>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="m-auto px-5 py-2">
+          <div class="card" style="width: 18rem;">
+            <h3 class="card-header">Package 3</h3>
+            <div class="card-body">
+              <h2 class="card-title">$49 / mo</h2>
+              <p class="card-title">Pirority Listing</p>
+              <p class="card-text">Unlimited Matches </p>
+              <p class="card-text">Unlimited Messages</p>
+              <p class="card-text">Unlimited App Usage</p>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </section>
