still centering the cards correctly and aligning them

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
       <h2>Packages</h2>
       <p>Something interesting here...</p>
 
-      <div class="d-sm-flex justify-content-center">
+      <div class="row px-5 ">
 
-        <div class="m-auto px-5 py-2">
+        <div class="col py-2 px-md-4">
           <div class=" card" style="width: 18rem;">
             <h3 class="card-header">Package 1</h3>
             <div class="card-body">
@@ -141,7 +141,7 @@
         </div>
 
 
-        <div class="m-auto px-5 py-2">
+        <div class="col py-2 px-md-4">
           <div class="card" style="width: 18rem;">
             <h3 class="card-header">Package 2</h3>
             <div class="card-body">
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <div class="m-auto px-5 py-2">
+        <div class="col py-2 px-md-4">
           <div class="card" style="width: 18rem;">
             <h3 class="card-header">Package 3</h3>
             <div class="card-body">
