--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Dog Dating Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -25,7 +27,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navmenu">
+        <div class="collapse navbar-collapse text-center" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="#footer" class="nav-link">Contact</a>
@@ -46,8 +48,8 @@
       class="container d-sm-flex align-items-center justify-content-between text-center text-sm-start text-light p-5">
       <div>
         <h1>Meet dog next door.</h1>
-        <button class="btn btn-dark">Download</button>
-        <button class="btn btn-outline-light">Download</button>
+        <button class="btn btn-dark"></i>Download</button>
+        <button class="btn btn-outline-light"><i class="fab fa-google-play"></i>Download</button>
       </div>
       <img class="img-fluid w-25" src="images/appp.png">
     </div>
@@ -123,61 +125,58 @@
 
 
   <!-- Pricing -->
-  <section id="pricing" class="bg-white text-center p-5">
-    <div class="container">
+  <section id="pricing" class="bg-white text-center p-5 align-items-center">
 
-      <div class="row">
-        <h2>Packages</h2>
-        <p>Something interesting here...</p>
+    <h2>Packages</h2>
+    <p>Something interesting here...</p>
+
+    <div class="row g-4">
+
+      <div class="col-md">
+        <div class=" card m-auto" style="width: 18rem;">
+          <h3 class="card-header">Package 1</h3>
+          <div class="card-body">
+            <h2 class="card-title">Free</h2>
+            <p class="card-text">5 Matches Per Day</p>
+            <p class="card-text">10 Messages Per Day</p>
+            <p class="card-text">Unlimited App Usage</p>
+            <a href="#" class="btn btn-outline-dark">Sign Up</a>
+          </div>
+        </div>
       </div>
 
-      <div class="row g-4">
 
-        <div class="col">
-          <div class=" card" style="width: 18rem;">
-            <h3 class="card-header">Package 1</h3>
-            <div class="card-body">
-              <h2 class="card-title">Free</h2>
-              <p class="card-text">5 Matches Per Day</p>
-              <p class="card-text">10 Messages Per Day</p>
-              <p class="card-text">Unlimited App Usage</p>
-              <a href="#" class="btn btn-outline-dark">Sign Up</a>
-            </div>
+      <div class="col-md">
+        <div class="card m-auto" style="width: 18rem;">
+          <h3 class="card-header">Package 2</h3>
+          <div class="card-body">
+            <h2 class="card-title">$29 / mo</h2>
+            <p class="card-text">Unlimited Matches</p>
+            <p class="card-text">Unlimited Messages</p>
+            <p class="card-text">Unlimited App Usage</p>
+            <a href="#" class="btn btn-dark">Sign Up</a>
           </div>
         </div>
-
-
-        <div class="col-md">
-          <div class="card" style="width: 18rem;">
-            <h3 class="card-header">Package 2</h3>
-            <div class="card-body">
-              <h2 class="card-title">$29 / mo</h2>
-              <p class="card-text">Unlimited Matches</p>
-              <p class="card-text">Unlimited Messages</p>
-              <p class="card-text">Unlimited App Usage</p>
-              <a href="#" class="btn btn-dark">Sign Up</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md">
-          <div class="card" style="width: 18rem;">
-            <h3 class="card-header">Package 3</h3>
-            <div class="card-body">
-              <h2 class="card-title">$49 / mo</h2>
-              <p class="card-title">Pirority Listing</p>
-              <p class="card-text">Unlimited Matches </p>
-              <p class="card-text">Unlimited Messages</p>
-              <p class="card-text">Unlimited App Usage</p>
-              <a href="#" class="btn btn-dark">Sign Up</a>
-            </div>
-          </div>
-        </div>
-
-
       </div>
+
+      <div class="col-md">
+        <div class="card m-auto " style="width: 18rem;">
+          <h3 class="card-header">Package 3</h3>
+          <div class="card-body">
+            <h2 class="card-title">$49 / mo</h2>
+            <p class="card-title">Pirority Listing</p>
+            <p class="card-text">Unlimited Matches </p>
+            <p class="card-text">Unlimited Messages</p>
+            <p class="card-text">Unlimited App Usage</p>
+            <a href="#" class="btn btn-dark">Sign Up</a>
+          </div>
+        </div>
+      </div>
+
 
     </div>
+
+
   </section>
 
 
