--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Dog Dating Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -48,8 +50,8 @@
       class="container d-sm-flex align-items-center justify-content-between text-center text-sm-start text-light p-5">
       <div>
         <h1>Meet dog next door.</h1>
-        <button class="btn btn-dark"></i>Download</button>
-        <button class="btn btn-outline-light"><i class="fab fa-google-play"></i>Download</button>
+        <button class="btn btn-dark"><i class="fab fa-apple px-1"></i>Download</button>
+        <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
       </div>
       <img class="img-fluid w-25" src="images/appp.png">
     </div>
@@ -81,7 +83,7 @@
 
   <!-- Testimonials -->
 
-  <section id=" testimonials">
+  <section id="testimonials">
     <div id="carouselExampleControls" class="carousel slide p-5" data-bs-ride="carousel">
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
@@ -119,7 +121,7 @@
   <section id="press" class="p-5">
     <div class="container text-center">
       <img class="w-25 px-3" src="images/mmtv-logo.png">
-      <img class="w-25 px-3 " src="images/llbci-logo.png">
+      <img class="w-25 px-3" src="images/llbci-logo.png">
     </div>
   </section>
 
@@ -160,7 +162,7 @@
       </div>
 
       <div class="col-md">
-        <div class="card m-auto " style="width: 18rem;">
+        <div class="card m-auto" style="width: 18rem;">
           <h3 class="card-header">Package 3</h3>
           <div class="card-body">
             <h2 class="card-title">$49 / mo</h2>
@@ -182,10 +184,10 @@
 
   <!-- Call to Action -->
   <section id="cta">
-    <div class="container text-center p-5 text-light ">
+    <div class="container text-center p-5 text-light">
       <h3>The APP that your dog needs.</h3>
-      <button class="btn btn-dark">Download</button>
-      <button class="btn btn-outline-light">Download</button>
+      <button class="btn btn-dark"><i class="fab fa-apple px-1"></i>Download</button>
+      <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
     </div>
   </section>
 
