adding icons; cleaning

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg bg-transparent navbar-dark navfont">
+    <nav class="navbar navbar-expand-lg bg-transparent navbar-dark py-3 navfont">
       <div class="container">
         <a href="#" class="navbar-brand">
           <h2 class="navfont">MyApp</h2>
@@ -31,13 +31,13 @@
         </button>
         <div class="collapse navbar-collapse text-center" id="navmenu">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <li class="nav-item mx-lg-3">
               <a href="#footer" class="nav-link">Contact</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-lg-3">
               <a href="#pricing" class="nav-link">Pricing</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-lg-3">
               <a href="#cta" class="nav-link">Download</a>
             </li>
           </ul>
@@ -45,17 +45,16 @@
       </div>
     </nav>
 
-
-    <div
-      class="container d-sm-flex align-items-center justify-content-between text-center text-sm-start text-light p-5">
-      <div>
-        <h1>Meet dog next door.</h1>
-        <button class="btn btn-dark"><i class="fab fa-apple px-1"></i>Download</button>
-        <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
+    <div class="container py-5">
+      <div class="d-sm-flex align-items-center justify-content-between text-center text-sm-start text-light">
+        <div>
+          <h1>Meet dog next door.</h1>
+          <button class="btn btn-dark"><i class="fab fa-apple px-1"></i>Download</button>
+          <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
+        </div>
+        <img class="img-fluid w-25" src="images/appp.png">
       </div>
-      <img class="img-fluid w-25" src="images/appp.png">
     </div>
-
   </section>
 
 
@@ -64,14 +63,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md">
+          <i class="fas fa-bullseye fa-5x featuresicon"></i>
           <h3>Feature1</h3>
           <p>Write soemthing here...</p>
         </div>
         <div class="col-sm">
+          <i class="fas fa-check-circle fa-5x featuresicon"></i>
           <h3>Feature2</h3>
           <p>Write soemthing here...</p>
         </div>
         <div class="col-sm">
+          <i class="fas fa-heart fa-5x featuresicon"></i>
           <h3>Feature3</h3>
           <p>Write soemthing here...</p>
         </div>
