working on title image

--- a/index.html
+++ b/index.html
@@ -45,17 +45,20 @@
       </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="mt-5">
       <div class="row text-center text-md-start text-light">
         <div class="col-md mt-0">
           <h1 class="titlefontsm">Meet dog next door.</h1>
           <button class="btn btn-dark my-3 my-md-4"><i class="fab fa-apple px-1"></i>Download</button>
           <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
         </div>
-        <div class="col-md">
-          <img class="w-50 rotateimage" src="images/app.png">
+        <div class="col-md containerparent">
+          <div class="containerchild">
+            <img class="dogappimg rotateimage" src=" images/app.png">
+          </div>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -63,7 +66,7 @@
   <!-- Features -->
   <section id="features" class="bg-white text-center p-5">
     <div class="container">
-      <div class="row">
+      <div class="row g-5">
         <div class="col">
           <i class="fas fa-bullseye fa-5x featuresicon"></i>
           <h3>Feature1</h3>
@@ -91,12 +94,12 @@
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
           <h2>Quote 1. Woof.</h2>
-          <img class="mediasm mediamd" src="images/dog-img.jpg">
+          <img class="imagesm imagemd testimonialdog mt-4" src="images/dog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
         <div class="carousel-item">
           <h2>Quote 2. Woof.</h2>
-          <img class="mediasm mediamd" src="images/dog-img.jpg">
+          <img class="imagesm imagemd testimonialdog mt-4" src="images/dog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
       </div>
@@ -123,8 +126,8 @@
   <!-- Press -->
   <section id="press" class="mb-5">
     <div class="container text-center">
-      <img class="mx-3 mediasm mediamd" src="images/mtv-logo.png">
-      <img class="mx-3 mediasm mediamd" src="images/lbci-logo.png">
+      <img class="mx-3 imagesm imagemd" src="images/mtv-logo.png">
+      <img class="mx-3 imagesm imagemd" src="images/lbci-logo.png">
     </div>
   </section>
 
@@ -135,10 +138,10 @@
     <h2>Packages</h2>
     <p>Something interesting here...</p>
 
-    <div class="row g-4 mt-3">
+    <div class="row g-5 mt-4 ">
 
       <div class="col">
-        <div class=" card m-auto" style="width: 16rem;">
+        <div class=" card m-auto " style="width: 16rem;">
           <h3 class="card-header">Package 1</h3>
           <div class="card-body">
             <h2 class="card-title">Free</h2>
@@ -188,7 +191,7 @@
   <!-- Call to Action -->
   <section id="cta">
     <div class="container text-center p-5 text-light">
-      <h3 class="poppinsbold mb-5">The APP that your dog needs.</h3>
+      <h3 class="poppinsbold mb-4">The APP that your dog needs.</h3>
       <button class="btn btn-dark"><i class="fab fa-apple px-1"></i>Download</button>
       <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
     </div>
@@ -197,10 +200,10 @@
 
   <!-- Footer -->
   <footer id="footer" class="text-center bg-white p-5">
-    <i class="fab fa-twitter fa-2x mx-2 mx-md-4"></i>
-    <i class="fab fa-facebook-f fa-2x mx-2 mx-md-4"></i>
-    <i class="fab fa-instagram fa-2x mx-2 mx-md-4"></i>
-    <i class="fas fa-envelope fa-2x mx-2 mx-md-4"></i>
+    <i class="fab fa-twitter fa-2x mx-3 mx-md-4 iconssm"></i>
+    <i class="fab fa-facebook-f fa-2x mx-3 mx-md-4 iconssm"></i>
+    <i class="fab fa-instagram fa-2x mx-3 mx-md-4 iconssm"></i>
+    <i class="fas fa-envelope fa-2x mx-3 mx-md-4 iconssm"></i>
     <p class="my-4">© Copyright SEF</p>
   </footer>
 
