--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </div>
     </nav>
 
-    <div class="mt-5">
+    <div class="mt-5 ms-3">
       <div class="row text-center text-md-start text-light">
-        <div class="col-md mt-0">
+        <div class="col-md mt-1">
           <h1 class="titlefontsm">Meet dog next door.</h1>
           <button class="btn btn-dark my-3 my-md-4"><i class="fab fa-apple px-1"></i>Download</button>
           <button class="btn btn-outline-light"><i class="fab fa-google-play px-1"></i>Download</button>
