--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
   <section id="testimonials">
     <div id="carouselExampleControls" class="carousel slide p-5" data-bs-ride="carousel">
       <div class="carousel-inner text-center">
-        <div class="carousel-item active">
+        <div class="carousel-item active ">
           <h2>Quote 1. Woof.</h2>
-          <img class="imagesm imagemd testimonialdog mt-4" src="images/dog-img.jpg">
+          <img class="imagesm imagemd testimonialdog" src="images/dog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
         <div class="carousel-item">
           <h2>Quote 2. Woof.</h2>
-          <img class="imagesm imagemd testimonialdog mt-4" src="images/dog-img.jpg">
+          <img class="imagesm imagemd testimonialdog" src="images/dog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
       </div>
@@ -133,57 +133,57 @@
 
 
   <!-- Pricing -->
-  <section id="pricing" class="bg-white text-center p-5 align-items-center">
+  <section id="pricing" class="bg-white text-center p-5">
 
     <h2>Packages</h2>
     <p>Something interesting here...</p>
+    <div class="container">
+      <div class="row g-5 mt-4">
 
-    <div class="row g-5 mt-4 ">
-
-      <div class="col">
-        <div class=" card m-auto " style="width: 16rem;">
-          <h3 class="card-header">Package 1</h3>
-          <div class="card-body">
-            <h2 class="card-title">Free</h2>
-            <p class="card-text">5 Matches Per Day</p>
-            <p class="card-text">10 Messages Per Day</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <a href="#" class="btn btn-outline-dark">Sign Up</a>
+        <div class="col-sm-6 col-lg-4">
+          <div class=" card m-auto" style="width: 16rem;">
+            <h3 class="card-header">Package 1</h3>
+            <div class="card-body">
+              <h2 class="card-title">Free</h2>
+              <p class="card-text">5 Matches Per Day</p>
+              <p class="card-text">10 Messages Per Day</p>
+              <p class="card-text">Unlimited App Usage</p>
+              <a href="#" class="btn btn-outline-dark">Sign Up</a>
+            </div>
           </div>
         </div>
-      </div>
 
 
-      <div class="col-sm">
-        <div class="card m-auto" style="width: 16rem;">
-          <h3 class="card-header">Package 2</h3>
-          <div class="card-body">
-            <h2 class="card-title">$29 / mo</h2>
-            <p class="card-text">Unlimited Matches</p>
-            <p class="card-text">Unlimited Messages</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <a href="#" class="btn btn-dark">Sign Up</a>
+        <div class="col-sm-6 col-lg-4">
+          <div class="card m-auto" style="width: 16rem;">
+            <h3 class="card-header">Package 2</h3>
+            <div class="card-body">
+              <h2 class="card-title">$29 / mo</h2>
+              <p class="card-text">Unlimited Matches</p>
+              <p class="card-text">Unlimited Messages</p>
+              <p class="card-text">Unlimited App Usage</p>
+              <a href="#" class="btn btn-dark">Sign Up</a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-md">
-        <div class="card m-auto" style="width: 16rem;">
-          <h3 class="card-header">Package 3</h3>
-          <div class="card-body">
-            <h2 class="card-title">$49 / mo</h2>
-            <p class="card-title">Pirority Listing</p>
-            <p class="card-text">Unlimited Matches </p>
-            <p class="card-text">Unlimited Messages</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <a href="#" class="btn btn-dark">Sign Up</a>
+        <div class="col-sm-6 col-lg-4 ">
+          <div class="card m-auto" style="width: 16rem;">
+            <h3 class="card-header">Package 3</h3>
+            <div class="card-body">
+              <h2 class="card-title">$49 / mo</h2>
+              <p class="card-title">Pirority Listing</p>
+              <p class="card-text">Unlimited Matches </p>
+              <p class="card-text">Unlimited Messages</p>
+              <p class="card-text">Unlimited App Usage</p>
+              <a href="#" class="btn btn-dark">Sign Up</a>
+            </div>
           </div>
         </div>
+
+
       </div>
-
-
     </div>
-
 
   </section>
 
