--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <title>Dog Dating Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap-5.1.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
         </div>
         <div class="col-md containerparent">
           <div class="containerchild">
-            <img class="dogappimg rotateimage" src="/assets/images/app.png">
+            <img class="dogappimg rotateimage" src="assets/images/app.png">
           </div>
         </div>
       </div>
@@ -96,12 +96,12 @@
       <div class="carousel-inner text-center">
         <div class="carousel-item active ">
           <h2>Quote 1. Woof.</h2>
-          <img class="imagesm imagemd testimonialdog" src="/assets/images/dog-img.jpg">
+          <img class="imagesm imagemd testimonialdog" src="assets/images/dog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
         <div class="carousel-item">
           <h2>Quote 2. Woof.</h2>
-          <img class="imagesm imagemd testimonialdog" src="/assets/images/dog-img.jpg">
+          <img class="imagesm imagemd testimonialdog" src="assets/images/dog-img.jpg">
           <em>Beirut, Lebanon</em>
         </div>
       </div>
@@ -128,8 +128,8 @@
   <!-- Press -->
   <section id="press" class="mb-5">
     <div class="container text-center">
-      <img class="mx-3 imagesm imagemd" src="/assets/images/mtv-logo.png">
-      <img class="mx-3 imagesm imagemd" src="/assets/images/lbci-logo.png">
+      <img class="mx-3 imagesm imagemd" src="assets/images/mtv-logo.png">
+      <img class="mx-3 imagesm imagemd" src="assets/images/lbci-logo.png">
     </div>
   </section>
 
@@ -210,7 +210,7 @@
   </footer>
 
 
-  <script src="/assets/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
