fixing padding and margins

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
     <div class="container">
       <div class="row g-5">
         <div class="col">
-          <i class="fas fa-bullseye fa-5x featuresicon"></i>
+          <i class="fas fa-bullseye fa-5x featuresicon p-3"></i>
           <h3>Feature1</h3>
           <p>Write something here...</p>
         </div>
         <div class="col-sm">
-          <i class="fas fa-check-circle fa-5x featuresicon"></i>
+          <i class="fas fa-check-circle fa-5x featuresicon p-3"></i>
           <h3>Feature2</h3>
           <p>Write something here...</p>
         </div>
         <div class="col-md">
-          <i class="fas fa-heart fa-5x featuresicon"></i>
+          <i class="fas fa-heart fa-5x featuresicon p-3"></i>
           <h3>Feature3</h3>
           <p>Write something here...</p>
         </div>
